--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ async-tungstenite = "^0.8.0"
 base32 = "0.4.0"
 fastrand = "^1"
 futures-util = "0.3.5"
-serde = {version = "^1", features = ["derive"]}
+serde = {version = "^1", features = ["derive", "rc"]}
 serde_json = "^1"
 smol = "^1"
